--- a/stage-03/projetos/galaxies/assets/css/style.css
+++ b/stage-03/projetos/galaxies/assets/css/style.css
@@ -55,6 +55,10 @@ main {
 
 /* Text */
 
+p {
+  letter-spacing: 1px;
+}
+
 .title {
   color: var(--color-text-title);
   font-size: 5.8rem;
@@ -93,17 +97,22 @@ main {
   overflow: hidden;
 }
 
-.card__title {
+.card .card__content {
+  padding: 24px 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.card .card__title {
   color: var(--color-text-heading);
   font-size: 3.5rem;
   font-weight: 900;
-  padding: 24px 22px;
 }
 
-.card__body {
+.card .card__body {
   color: var(--color-text-body);
   font-size: 1.9rem;
-  padding: 0 22px 38px;
 }
 
 .card img {
