refactor imc project

--- a/stage-04/projects/imc/style.css
+++ b/stage-04/projects/imc/style.css
@@ -139,6 +139,7 @@ fieldset legend {
 .btn-primary {
   background-color: var(--color-bg-button);
   color: #fff;
+  font-weight: bold;
   transition: background-color 150ms;
 }
 
